--- a/dogadoption.html
+++ b/dogadoption.html
@@ -28,7 +28,8 @@
   margin-left: 900px;
 }
         h1{
-            margin-top: 499px;
+            
+            text-align: left;
         }
         
 
